--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,13 @@ input:focus {
   border-radius: 5px;
 }
 
+body {
+  font-family: 'Twemoji Country Flags', 'Manrope', sans-serif;
+  color: var(--color-light--2);
+  font-weight: 400;
+  line-height: 1.6;
+}
+
 /*
 "importCSSModule": {
     "prefix": "csm",
