--- a/src/components/CityList.module.css
+++ b/src/components/CityList.module.css
@@ -2,8 +2,7 @@
   width: 100%;
   height: 65vh;
   list-style: none;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow: auto;
 
   display: flex;
   flex-direction: column;
@@ -11,5 +10,14 @@
 }
 
 .cityList::-webkit-scrollbar {
-  width: 0;
+  width: 0.6rem; /* Slightly larger for better visibility */
+}
+
+.cityList::-webkit-scrollbar-thumb {
+  background: #ccc; /* Style the scrollbar thumb */
+  border-radius: 0.3rem; /* Rounded corners for thumb */
+}
+
+.cityList::-webkit-scrollbar-thumb:hover {
+  background: #999; /* Darker thumb on hover */
 }
